--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Netflix Skin for JWPLAYER8 v2.0.6</title>
+  <title>dark</title>
   <link rel="stylesheet" href="https://dl.dropbox.com/s/czkthdyojg52z1y/style.css">
 
 </head>
@@ -54,7 +54,7 @@
     {
       title: "Elfen Lied 1",
       description: "   ",
-      image: "https://image.tmdb.org/t/p/w500//2LGEByY5oimefnDhlo3nqNOGkxD.jpg",
+      image: "  ",
       sources: [
         {
           file:
